// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-sc-17wrw9k-0 jlJSrS"
  data-testid="header-bg"
>
  <div
    class="header__Container-sc-17wrw9k-2 dWBTvK"
  >
    <p
      class="header__Link-sc-17wrw9k-4 jkcOZA"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-sc-17wrw9k-2 dWBTvK"
>
  <p
    class="header__Link-sc-17wrw9k-4 gRqzfE"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-sc-17wrw9k-0 llraVE"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-sc-17wrw9k-2 dWBTvK"
  >
    <div
      class="header__Group-sc-17wrw9k-1 ljSZbf"
    >
      <p
        class="header__Link-sc-17wrw9k-4 gRqzfE"
      >
        Series
      </p>
      <p
        class="header__Link-sc-17wrw9k-4 gRqzfE"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-sc-17wrw9k-1 ljSZbf"
    >
      <div
        class="header__Search-sc-17wrw9k-6 jtsAgG"
      >
        <button
          class="header__SearchIcon-sc-17wrw9k-7 gZoRUV"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-sc-17wrw9k-8 egrdTX"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-sc-17wrw9k-9 lguhQd"
      >
        <button
          class="header__Picture-sc-17wrw9k-3 bbDIiK"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-sc-17wrw9k-5 iKSFMm"
        >
          <div
            class="header__Group-sc-17wrw9k-1 ljSZbf"
          >
            <button
              class="header__Picture-sc-17wrw9k-3 bbDIiK"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-sc-17wrw9k-4 gRqzfE"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-sc-17wrw9k-1 ljSZbf"
          >
            <p
              class="header__Link-sc-17wrw9k-4 gRqzfE"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-sc-17wrw9k-2 header__Feature-sc-17wrw9k-12 dWBTvK BeczX"
  >
    <h2
      class="header__FeatureCallOut-sc-17wrw9k-13 gmCEVw"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-sc-17wrw9k-15 bzeHjf"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-sc-17wrw9k-14 kdzCBV"
    >
      Play
    </button>
  </div>
</div>
`;
